# miswag-dbt-yml

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  test-build.yml
dbt_yml_gen/: __init__.py  cli.py  clickhouse_client.py  column_analyzer.py  config.py  constants.py  interactive.py  sql_parser.py  validator.py  yml_generator.py
