[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "miswag-dbt-yml"
version = "0.1.0"
description = "Automated dbt YAML schema generator with data governance for ClickHouse"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hameed Mahmood", email = "hameed@miswag.com"}
]
keywords = ["dbt", "yaml", "schema", "clickhouse", "data-governance", "pii-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "clickhouse-connect>=0.6.0",
    "ruamel.yaml>=0.17.0",
    "sqlparse>=0.4.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hameeddataeng/miswag-dbt-yml"
Documentation = "https://github.com/hameeddataeng/miswag-dbt-yml#readme"
Repository = "https://github.com/hameeddataeng/miswag-dbt-yml"
Issues = "https://github.com/hameeddataeng/miswag-dbt-yml/issues"

[project.scripts]
miswag-dbt-yml = "dbt_yml_gen.cli:cli"

[tool.setuptools]
packages = ["dbt_yml_gen"]
